# SIMD_Acceleration

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Converter.h  Converter_AVX.cpp  Converter_MMX.cpp  Converter_SSE.cpp  Converter_Scalar.cpp  ImageTypes.h
src/utils/: AlignedMem.h  Timer.h
